# ocrclip

./: .gitignore  AGENTS.md  Dockerfile.build.full  README.md  ocrclip.spec  pyproject.toml  requirements-full.txt  requirements-lite.txt
pyinstaller-hooks/: hook-easyocr.py  hook-torch.py
scripts/: build_exe.py  cleanup_artifacts.sh  debug_capture.py  dev-setup.sh  hook-PySide6.py  manage_binaries.sh  preflight.py  pyi_hook_linux_xcb.py  pyi_hook_windows_manifest.py  pyi_post_build_linux_fix_rpath.py  pyi_rth_ldpath.py  pyi_rth_qt.py
src/: __init__.py  capture.py  main.py
tests/: test_trayapp.py
